--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,5 +1,5 @@
 <StackLayout>
     <Label text="Discovery" (tap)="discovery()"></Label>
-    <Label text="Print" (tap)="printer()"></Label>
+    <Label text="Print" (tap)="printBoardingPass()"></Label>
     <Label text="{{printId}}" ></Label>
 </StackLayout>
